srsly fix UL spacing issue... hurr

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -445,5 +445,5 @@ Small Device Styles
 }
 
 ul{
-  margin-top:0px;
+  margin-bottom: 0px;
 }
